objects/Activity_Plan_Item__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Plan__c</fullName>
        <label>Activity Template</label>
        <referenceTo>Activity_Plan__c</referenceTo>
        <relationshipLabel>Activity Template Items</relationshipLabel>
        <relationshipName>Activity_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Subject__c</fullName>
        <label>Activity Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <description>To Enter Days According to Due Date of the Activity.</description>
        <inlineHelpText>Enter days according to the Due Date of the Activity.</inlineHelpText>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>To Set Due Date of an Activity</description>
        <inlineHelpText>Please select the From Field that tells when you want due date of the Activity.</inlineHelpText>
        <label>From:</label>
        <picklist>
            <picklistValues>
                <fullName>Date of Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>01 - Understand Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Validate Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Qualify the Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04A - Develop Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04B - Propose Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Negotiate &amp; Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Won, Deploy &amp; Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Not Pursued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MileStone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Activity Template Item</label>
    <nameField>
        <displayFormat>ACT-{000000000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>